[package]
name = "internal"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.8", features = ["consoleapi", "minwindef"] }
windows = { version = "0.43.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
]}
minhook-sys = "0.1.1"
pelite = "0.9.1"

[lib]
crate-type = ["cdylib"]